fix: fullscreen panel uses width/height 100% instead of absolute inset (prevents height collapse)

--- a/src/primitives/artifact-fullscreen.css
+++ b/src/primitives/artifact-fullscreen.css
@@ -1,16 +1,12 @@
 .cei-artifact-fullscreen-root {
   position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  inset: 0;
   z-index: 28;
-  min-height: 0;
 }
 
 .cei-artifact-fullscreen-panel {
-  position: absolute;
-  inset: 0;
+  width: 100%;
+  height: 100%;
   display: grid;
   grid-template-rows: auto 1fr;
   min-height: 0;
